<resources>
    <string name="app_name">District13</string>
    <string name="loading">Loading...</string>
    <string name="fetch_punks">FETCH PUNKS!</string>
    <string name="beers_greater_than_this_abv">Beers greater than this ABV</string>
    <string name="beers_brewed_before_this_date_mm_yyyy">Beers brewed before this date (MM-YYYY)</string>
    <string name="no_result">No Result Found! Please Try Again.</string>
    <string name="button_sticker_activity">Sticker</string>
    <string name="text_service_button">At your Service</string>
    <string name="text_district_13">District 13!</string>
    <string name="hint_sticker_login">Username</string>
    <string name="button_sticker_log_in">log in</string>
    <string name="textView_sticker_login_title">Log In</string>
    <string name="text_sticker_activity_title">Sticker</string>
    <string name="text_sticker_welcome_user">Welcome, %1$s! \nPlease choose someone to text!</string>
    <string name="button_sticker_select">Select Stickers</string>
    <string name="textView_sticker_dialog_title">Choose your sticker</string>
    <string name="textView_sticker_dialog_send">Send</string>
    <string name="textView_sticker_dialog_cancel">Cancel</string>
    <string name="textView_sticker_dialog_send_success">Send stickers to users successfully!</string>
    <string name="textView_sticker_dialog_send_fail">Failed to send stickers to users!</string>
    <string name="history">history</string>
    <string name="sticker_sent">Sticker Sent:</string>
    <string name="channel_name">sticker_channel</string>
    <string name="channel_description">The notification channel for sticker activity</string>
    <string name="user">User:</string>
    <string name="sticker_received">Sticker Received:</string>
    <string name="button_history_sent">Sent Stickers</string>
    <string name="button_history_received">Received History</string>
    <string name="about">About</string>
    <string name="button_tea_talks">Tea Talks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>