<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="?android:textColorPrimary"
    tools:context=".StickerHistory">

    <TextView
        android:id="@+id/history_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_history_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_history_sent"
        app:layout_constraintStart_toStartOf="@+id/history_user"
        app:layout_constraintTop_toBottomOf="@+id/history_user" />

    <Button
        android:id="@+id/button_history_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_history_received"
        app:layout_constraintStart_toStartOf="@+id/button_history_sent"
        app:layout_constraintTop_toBottomOf="@+id/button_history_sent" />

</androidx.constraintlayout.widget.ConstraintLayout>